--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <h1 class="title">
           <span class="content__accent">По-</span><br />смотри<br />в окно
         </h1>
-        <div class="content__list-container">
+        <div class="content__list-container custom-scrollbar">
           <ul class="content__list">
             <!-- ЗДЕСЬ ОКАЖУТСЯ ТЕМПЛЕЙТЫ КАРТОЧЕК -->
           </ul>
@@ -113,7 +113,7 @@
 
     <template class="error-template">
       <div class="error">
-        <h2 class="error__title">Из этого города нет видео :(</h2>
+        <h2 class="error__title">Из этого города нет видео:(</h2>
       </div>
     </template>
     <script src="./scripts/script.js"></script>
